--- a/ONtime/public_html/login.html
+++ b/ONtime/public_html/login.html
@@ -71,6 +71,7 @@
         <div class=container>
             <div class="row">
                 <div class="col-md-6">
+                    <!-- w3schools, https://www.w3schools.com/js/js_validation.asp -->
                     <div class="login-form">
                         <form name="Login" action="index.html" method="post" onsubmit="return validateform()">
                             <h2 class="text-center">Login</h2>
