--- a/ONtime/public_html/index.html
+++ b/ONtime/public_html/index.html
@@ -233,7 +233,8 @@ and open the template in the editor.
                     <a href="aboutus.html">
                         <p>About Us</p>
                     </a>
-                    <p>Contact Us</p>
+                    <a href=""><p>Contact Us</p>
+                    </a>
                 </section>
 
                 <section class="col-md-4">
