--- a/ONtime/public_html/customerservice.html
+++ b/ONtime/public_html/customerservice.html
@@ -222,7 +222,8 @@
                         <a href="aboutus.html">
                             <p>About Us</p>
                         </a>
-                        <p>Contact Us</p>
+                        <a href=""><p>Contact Us</p>
+                        </a>
                     </section>
 
                     <section class="col-md-4">
