--- a/ONtime/public_html/login.html
+++ b/ONtime/public_html/login.html
@@ -128,7 +128,8 @@
                     <a href="aboutus.html">
                         <p>About Us</p>
                     </a>
-                    <p>Contact Us</p>
+                    <a href=""><p>Contact Us</p>
+                    </a>
                     </section>
                     <section class="col-md-4">
                         <h1>Customer Support</h1>
