--- a/ONtime/public_html/products.html
+++ b/ONtime/public_html/products.html
@@ -21,7 +21,6 @@ and open the template in the editor.
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -379,7 +378,8 @@ and open the template in the editor.
                     <a href="aboutus.html">
                         <p>About Us</p>
                     </a>
-                    <p>Contact Us</p>
+                    <a href=""><p>Contact Us</p>
+                    </a>
                 </section>
 
                 <section class="col-md-4">
@@ -410,14 +410,6 @@ and open the template in the editor.
                         <p><i class="fa fa-twitter"></i> Twitter</p>
                     </a>
                 </section>
-
-                <!-- <section class = "col-md-3">
-                        <h1>Download App</h1>
-                        <figure class="footer-img">
-                            <img src="img/google.jpg">
-                            <img src="img/apple.jpg">
-                        </figure>
-                    </section>-->
             </section>
             <hr />
             <p class="copyright">Copyright &copy; 2019 <i class="fa fa-heart-o"></i> ONTime</p>
