--- a/ONtime/public_html/productsreview.html
+++ b/ONtime/public_html/productsreview.html
@@ -163,7 +163,8 @@ and open the template in the editor.
                 <section class="col-md-4">
                     <h1>Company</h1>
                     <p>About Us</p>
-                    <p>Contact Us</p>
+                    <a href=""><p>Contact Us</p>
+                    </a>
                 </section>
 
                 <section class="col-md-4">
